# cpen211-emulator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  machine.cpp  main.cpp  parser.cpp
src/include/: machine.h  parser.h
src/test_programs/: add.s  add.sas  elf_program  fib.s  fib.sas
test/: CMakeLists.txt  test.cpp
